--- a/src/app/hello-world-bindings/hello-world-bindings.component.html
+++ b/src/app/hello-world-bindings/hello-world-bindings.component.html
@@ -1,2 +1,5 @@
 <button (click)="sayMessage()" [disabled]="canClick">Trigger alert message</button>
 <p [id]="sayHelloId" [style.color]="fontColor">You can set my color in the component!</p>
+
+<button (click)="toggleBackground()">Change Background</button>
+<p [id]="myBackground" [style.background]="backgroundColor" [style.color]="fontColorText">This is my background</p>
