--- a/src/styles.css
+++ b/src/styles.css
@@ -3,15 +3,16 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  color: #264D73;
+  color: #264d73;
   font-size: 250%;
 }
-h2, h3 {
+h2,
+h3 {
   color: #444;
   font-weight: lighter;
 }
 body {
-  padding: .5em;
+  padding: 0.5em;
   max-width: 1000px;
   margin: auto;
 }
@@ -20,7 +21,8 @@ body {
     padding: 2em;
   }
 }
-body, input[text] {
+body,
+input[text] {
   color: #333;
   font-family: Cambria, Georgia, serif;
 }
@@ -44,6 +46,11 @@ button:disabled {
   cursor: auto;
 }
 
+p {
+  padding: 5px;
+  border-radius: 4px;
+}
+
 /* Navigation link styles */
 nav a {
   padding: 5px 10px;
@@ -58,7 +65,7 @@ nav a {
 
 nav a:hover {
   color: white;
-  background-color:  #42545C;
+  background-color: #42545c;
 }
 nav a.active {
   background-color: black;
